Switch CI pipeline to Java 17+ and upgrade Mockito to 4.x
- Update integration-tests.yml: Java 8/11 → Java 17
- Update release.yml: Java 8 → Java 17
- Remove 2-PRIOR Scala version from CI defaults (only 2.13 supported)
- Upgrade Mockito from 1.10.19 to 4.11.0 (Java 17+ compatible)
- Switch from mockito-all to mockito-core + mockito-inline
- Fix Mockito API changes: Matchers → ArgumentMatchers,
  anyString() → any[String] (null matching behavior change)